[project]
name = "tutorial-builder"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrick  Coutinho",email = "patrick@istyle.com.br"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "tutorial_builder", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
