[project]
name = "tutorial-builder"
version = "0.1.0"
description = ""
authors = [{ name = "Patrick  Coutinho", email = "patrick@istyle.com.br" }]
readme = "README.md"
requires-python = ">=3.11.11,<4.0"
dependencies = [
    "langgraph (>=0.3.20,<0.4.0)",
    "langchain-core (>=0.3.48,<0.4.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "langchain-openai (>=0.3.10,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]

[tool.poetry]
packages = [
    { include = "tutorial_builder", from = "src" },
    { include = "entities", from = "src/tutorial_builder/domain" },
    { include = "interfaces", from = "src/tutorial_builder/domain" },
    { include = "services", from = "src/tutorial_builder/application" },
    { include = "persistence", from = "src/tutorial_builder/infrastructure" },
    { include = "llm", from = "src/tutorial_builder/infrastructure" },
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
